fixed alignment on custom workouts layout, workouts as params to workout screen, display workout title and  ending workouts

--- a/workoutbuilder/src/App.css
+++ b/workoutbuilder/src/App.css
@@ -76,6 +76,11 @@
   min-height: 100vh;
 }
 
+.customWorkoutImg {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 @media only screen and (max-width: 600px) {
   .bodyProjectImg {
     width: 70%;
